# buddy-system

./: .gitignore  Cargo.toml  README.md  pyproject.toml  requirements.txt
bridge/: Cargo.toml
bridge/src/: entropy.rs  graph.rs  lib.rs  router.rs
eval/: datasets.py  metrics.py  run.py
examples/: baseline.py  full_pipeline.py
frugal/: __init__.py  buddy.py  model.py  pipeline.py  retriever.py  uncertainty.py
frugal/tools/: __init__.py  classifier.py  math_solver.py  ner.py  registry.py  sentiment.py  similarity.py
tests/: test_math_solver.py  test_metrics.py  test_tools.py
