[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "frugal"
version = "0.1.0"
description = "Graph-gated local/cloud inference with classical-model routing — spend cloud tokens only when no cheaper tool can do the job."
requires-python = ">=3.11"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mlx-lm>=0.18.0",
    "anthropic>=0.40.0",
    "spacy>=3.7.0",
    "scikit-learn>=1.4.0",
    "vaderSentiment>=3.3.2",
    "sentence-transformers>=2.6.0",
]

[tool.maturin]
# Python package lives in ./frugal/; compiled Rust extension is imported as frugal._bridge
python-source = "."
module-name = "frugal._bridge"
manifest-path = "bridge/Cargo.toml"
features = ["pyo3/extension-module"]
